bin/tests/snapshots/useless_parens__ed0b445d7f4db791ac8dcf41de7d3bc4_lint_stderr.snap
---
source: bin/tests/useless_parens.rs
---
let a = 0; in (null)
---
[08] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:15 ]
   │
 1 │ let a = 0; in (null)
   │               ───┬──  
   │                  ╰──── Useless parentheses around body of let expression
───╯
