bin/tests/snapshots/useless_parens__f04dfa0b3c36c6f2489cba3b913db246_lint.snap
---
source: bin/tests/useless_parens.rs
---
let b = 0; in (b)
---
[useless_parens] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:15 ]
   │
 1 │ let b = 0; in (b)
   │               ─┬─  
   │                ╰─── Useless parentheses around body of let expression
───╯
