bin/tests/snapshots/useless_parens__f04dfa0b3c36c6f2489cba3b913db246_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
let b = 0; in (b)
---
<temp_file_path>>1:15:W:8:[useless_parens] Useless parentheses around body of `let` expression
