bin/tests/snapshots/useless_parens__f04dfa0b3c36c6f2489cba3b913db246_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
let b = 0; in (b)
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 15
            },
            "to": {
              "line": 1,
              "column": 18
            }
          },
          "message": "Useless parentheses around body of `let` expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 15
              },
              "to": {
                "line": 1,
                "column": 18
              }
            },
            "fix": "b"
          },
          "fixable": true
        }
      ]
    }
  ]
}
