bin/tests/snapshots/useless_parens__fix_0de8e7054ca37e3ccc69d442aa1697e4ca4ad2925f4fb9115557fb65f360b723.snap
---
source: bin/tests/useless_parens.rs
---
let b = 0; in (b)

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let b = 0; in (b)
+let b = 0; in b
