bin/tests/snapshots/useless_parens__fix_518aa31f8b9a466e2e92490ffd87be423d3e42cf20c228150cef6c88bbd4fb11.snap
---
source: bin/tests/useless_parens.rs
expression: snapshot
---
expression:
let h = ({ inherit (builtins) map; }); in null
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let h = ({ inherit (builtins) map; }); in null
+let h = { inherit (builtins) map; }; in null
