bin/tests/snapshots/useless_parens__fix_67ffd912c9610f8ceb69fbfed2ee46908a1d4bcba43542f10eac24a50b0d8d11.snap
---
source: bin/tests/useless_parens.rs
expression: snapshot
---
expression:
[(builtins.pam or map)]
---
