bin/tests/snapshots/useless_parens__fix_6c7cbb8c73d0335dbaafbcb2b65385fee20f9cce6f7595f734f5d64161b0bd62.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let h = ({ inherit (builtins) map; }); in null
+let h = { inherit (builtins) map; }; in null
