bin/tests/snapshots/useless_parens__fix_a00af5ff8a77ce04305ce009f5cd54c74661f23c2322608d6b7441445f8c5998.snap
---
source: bin/tests/useless_parens.rs
---
let a = (1 + 2); in null

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = (1 + 2); in null
+let a = 1 + 2; in null
